@@ -41,7 +41,6 @@ class WC_Subscriptions_Upgrader {
 	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v1.2
 	 */
 	public static function init() {
-
 		self::$active_version = get_option( WC_Subscriptions_Admin::$option_prefix . '_active_version', '0' );
 
 		self::$is_wc_version_2 = version_compare( get_option( 'woocommerce_db_version' ), '2.0', '>=' );
@@ -55,55 +54,46 @@ class WC_Subscriptions_Upgrader {
 			self::set_cron_lock();
 		}
 
-		if ( isset( $_POST['action'] ) && 'wcs_upgrade' == $_POST['action'] ) { // We're checking for CSRF in ajax_upgrade
-
-			add_action( 'wp_ajax_wcs_upgrade', __CLASS__ . '::ajax_upgrade', 10 );
-
-		} elseif ( @current_user_can( 'activate_plugins' ) ) {
-
-			if ( isset( $_GET['wcs_upgrade_step'] ) || $version_out_of_date ) {
-
-				$is_upgrading = get_option( 'wc_subscriptions_is_upgrading', false );
+		if ( isset( $_POST['action'] ) && 'wcs_upgrade' === $_POST['action'] ) { // phpcs:ignore WordPress.Security.NonceVerification.Recommended We're checking for CSRF in ajax_upgrade
+			add_action( 'wp_ajax_wcs_upgrade', [ __CLASS__, 'ajax_upgrade' ], 10 );
+		} elseif ( @current_user_can( 'activate_plugins' ) ) { // phpcs:ignore WordPress.PHP.NoSilencedErrors
+			if ( isset( $_GET['wcs_upgrade_step'] ) || $version_out_of_date ) { // phpcs:ignore WordPress.Security.NonceVerification.Recommended
+				$upgrade_ts   = get_option( 'wc_subscriptions_is_upgrading', false );
+				$is_upgrading = false !== $upgrade_ts;
 
 				// Check if we've exceeded the 2 minute upgrade window we use for blocking upgrades (we could seemingly use transients here to get the check for free if transients were guaranteed to exist: http://journal.rmccue.io/296/youre-using-transients-wrong/)
-				if ( false !== $is_upgrading && $is_upgrading < gmdate( 'U' ) ) {
+				if ( $is_upgrading && $upgrade_ts < gmdate( 'U' ) ) {
 					$is_upgrading = false;
 					delete_option( 'wc_subscriptions_is_upgrading' );
 				}
 
-				if ( false !== $is_upgrading ) {
-
-					add_action( 'init', __CLASS__ . '::upgrade_in_progress_notice', 11 );
-
+				if ( $is_upgrading ) {
+					add_action( 'init', [ __CLASS__, 'upgrade_in_progress_notice' ], 11 );
 				} else {
-
 					// Run upgrades as soon as admin hits site
-					add_action( 'wp_loaded', __CLASS__ . '::upgrade', 11 );
-
+					add_action( 'wp_loaded', [ __CLASS__, 'upgrade' ], 11 );
 				}
-			} elseif ( is_admin() && isset( $_GET['page'] ) && 'wcs-about' == $_GET['page'] ) {
-
-				add_action( 'admin_menu', __CLASS__ . '::updated_welcome_page' );
-
+			} elseif ( is_admin() && isset( $_GET['page'] ) && 'wcs-about' === $_GET['page'] ) { // phpcs:ignore WordPress.Security.NonceVerification.Recommended
+				add_action( 'admin_menu', [ __CLASS__, 'updated_welcome_page' ] );
 			}
 		}
 
 		// While the upgrade is in progress, we need to block PayPal IPN messages to avoid renewals failing to process
-		add_action( 'woocommerce_api_wc_gateway_paypal', __CLASS__ . '::maybe_block_paypal_ipn', 0 );
+		add_action( 'woocommerce_api_wc_gateway_paypal', [ __CLASS__, 'maybe_block_paypal_ipn' ], 0 );
 
 		// Sometimes redirect to the Welcome/About page after an upgrade
-		add_action( 'woocommerce_subscriptions_upgraded', __CLASS__ . '::maybe_redirect_after_upgrade_complete', 100, 2 );
+		add_action( 'woocommerce_subscriptions_upgraded', [ __CLASS__, 'maybe_redirect_after_upgrade_complete' ], 100, 2 );
 
-		add_action( 'wcs_repair_end_of_prepaid_term_actions', __CLASS__ . '::repair_end_of_prepaid_term_actions' );
+		add_action( 'wcs_repair_end_of_prepaid_term_actions', [ __CLASS__, 'repair_end_of_prepaid_term_actions' ] );
 
-		add_action( 'wcs_repair_subscriptions_containing_synced_variations', __CLASS__ . '::repair_subscription_contains_sync_meta' );
+		add_action( 'wcs_repair_subscriptions_containing_synced_variations', [ __CLASS__, 'repair_subscription_contains_sync_meta' ] );
 
 		// When WC is updated from a version prior to 3.0 to a version after 3.0, add subscription address indexes. Must be hooked on before WC runs its updates, which occur on priority 5.
-		add_action( 'init', array( __CLASS__, 'maybe_add_subscription_address_indexes' ), 2 );
+		add_action( 'init', [ __CLASS__, 'maybe_add_subscription_address_indexes' ], 2 );
 
-		add_action( 'admin_notices', array( __CLASS__, 'maybe_display_external_object_cache_warning' ) );
+		add_action( 'admin_notices', [ __CLASS__, 'maybe_display_external_object_cache_warning' ] );
 
-		add_action( 'init', array( __CLASS__, 'initialise_background_updaters' ), 0 );
+		add_action( 'init', [ __CLASS__, 'initialise_background_updaters' ], 0 );
 	}
 
 	/**
